--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,15 @@
 h1
 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: sans-serif;
     text-align: center;
 }
 
 
 #board{
-    margin-left: auto;
-    margin-right: auto;
+margin-left: auto;
+margin-right: auto;
 height: 330px;
 width: 320px;
-display: flex;
 flex-wrap: wrap;
 background-color: gray;
 border-spacing: 0;
@@ -36,7 +35,23 @@ background: red;
 #score{
     display: block;
     padding-top: 5%;
+    padding-bottom: 5%;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: sans-serif;
+}
+
+#reset
+{
+    margin-left: auto;
+    margin-right: auto;
+    border: none;
+    display: block;
+    background-color: #555555;
+    color: white;
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 16px;
+    padding: 15px 32px;
+    cursor: pointer;
 }
 
